assets/scss/style.scss
/* ... */
////////////////////////////////////////
// single.html
////////////////////////////////////////

.bg-img {
  width: 100vw;
  height: 100vh;
  opacity: .03;
  z-index: -1;
  position: fixed;
  top: 0;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  transition: opacity .5s;
}

.post-header {
  margin-top: 1.2em;
  line-height: normal;

  h1 {
    margin-top: .1em;
  }

  h2 {
      margin-top: -.5em;
      font-weight: normal;
      // color: $offwhite;
  }

  img.post-image {
      margin-top: 1em;
      width: 100%;
  }
}

hr.post-end {
  width: 50%;
  margin-top: 1em;
  margin-bottom: .8em;
  margin-left: 0;
  border-style: solid;
  border-bottom-width: 4px;
}

.content {
  // small size for mobile screens, turned up with media queries
  font-size: 0.95em;
  line-height: 2.2em;

  {{- with .Site.Params.justifyContent }}
  text-align: justify;
  text-justify: inter-ideograph; //For IE/Edge
  {{- end }}

  @include animated-a-tag;

  em {
      font-style: italic;
      color: $text-light;
  }

  figure {
    max-width: 100%;
    height: auto;
    margin: 0;
    text-align: center;

    p {
      font-size: .8em;
      font-style: italic;
      @include dimmed;
    }
  }

  figure.left {
    float: left;
    margin-right: 1.5em;
    max-width: 50%;
  }

  figure.right {
    float: right;
    margin-left: 1.5em;
    max-width: 50%;
  }

  figure.big {
    max-width: 100vw;
  }

  img {
    display: block;
    max-width: 100%;
    height: auto;
    margin: auto;
    border-radius: 4px;
  }

  ul,
  ol {
    padding: 0;
    margin-left: 1.8em;
  }

  a.anchor {
    float: left;
    margin-left: -20px;
    padding-right: 6px;
    box-shadow: none;
    opacity: .8;
    &:hover {
      background: none;
      color: $theme;
      opacity: 1;
    }

    svg {
      display: inline-block;
      width: 14px;
      height: 14px;
      vertical-align: baseline;
      visibility: hidden;
    }
    &:focus svg {
      visibility: visible;
    }
  }

  h1:hover a.anchor svg,
  h2:hover a.anchor svg,
  h3:hover a.anchor svg,
  h4:hover a.anchor svg,
  h5:hover a.anchor svg,
  h6:hover a.anchor svg {
    visibility: visible;
  }
}

.signature a {
  color: $theme;
  text-decoration: none;
  border: none;
  transition-property: color;
  transition-duration: .4s;
  transition-timing-function: ease-out;
  @include theme-glow;

  &:hover {
    color: #fff;
    text-shadow: 0 0 1px #fff;
  }
}

.footnotes {
  font-size: .85em;

  a {
    box-shadow: none;
    text-decoration: underline;
    transition-property: color;

    &:hover {
      background: transparent;
    }

    &.footnote-backref {
      text-decoration: none;
    }
  }

  ol {
    line-height: 1.8;
  }
}

a.footnote-ref {
  box-shadow: none;
  text-decoration: none;
  padding: 2px;
  border-radius: 2px;
  background-color: $midnightblue;

  &:hover{
    box-shadow: none;
    background-color: $theme;
    transition-property: background-color;
  }
}

.post-info {
  font-size: .8rem;
  line-height: normal;
  @include dimmed;

  p {
    margin: .8em 0;
  }

  a:hover {
    border-bottom: 1px solid $theme;
  }

  svg {
    margin-right: .8em;
  }

  .tag {
    margin-right: .5em;

    &::before {
      content: "#"
    }
  }
}

#toc {
  position: fixed;
  left: 50%;
  top: 0;
  display: none;
}

.toc-title {
  margin-left: 1em;
  margin-bottom: .5em;
  font-size: .8em;
  font-weight: bold;
}

#TableOfContents {
  font-size: .8em;
  @include dimmed;

  ul {
    padding-left: 1em;
    margin: 0;
  }

  &>ul {
    list-style-type: none;

    ul ul {
      font-size: .9em;
    }
  }

  a:hover {
    border-bottom: $theme 1px solid;
  }
}


.post-nav {
  display: flex;
  justify-content: space-between;
  margin-top: 1.5em;
  margin-bottom: 2.5em;
  font-size: 1.2em;

  a {
    flex-basis: 50%;
    flex-grow: 1;
  }

  .next-post {text-align: left; padding-right: 5px;}
  .prev-post {text-align: right; padding-left: 5px;}

  .post-nav-label {
    font-size: .8em;
    opacity: .8;
    text-transform: uppercase;
  }
}

.related-posts {
  // padding: .8em;
  margin-top: 5em;
  font-size: 1rem;
  // border: 3px solid $theme;
  // border-radius: 5px;

  h2{
    margin: 0;
    line-height: normal;
  }

  ul {
    margin-top: .5em;
    margin-bottom: 0;
  }
}

////////////////////////////////////////
// subscribe-form.html
////////////////////////////////////////

form.subscription-form {

    input {
        background-color: $background;
        width: 50%;
        padding: 0.5em 0.5em;
        margin: 1em 0;
        border: 2px solid $text;
        border-radius: 4px;
    }

    input:focus {
        outline: none;
        border-color: $theme;
    }

    button {
        color: $background;
        background-color: $theme;
        padding: 0.5em 0.5em;
        border: 2px solid $theme;
        border-radius: 4px;
        cursor: pointer;
    }
}

////////////////////////////////////////
// music/ and books/
////////////////////////////////////////

ul.oeuvre-list {
    margin: 0;
    padding: 0;
    list-style: none;

    .oeuvre-item {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        margin-bottom: 4em;

        .oeuvre-cover {
            margin: 0em 1em 1em 0em;
            padding: 0em;

            img {
                max-width: 300px;
                align-self: center;
            }
        }

        .oeuvre-title-year {
            margin: 0em 1em 0em 0em;

            .oeuvre-title {
                margin: 0;
                padding: 0;
                font-weight: bold;
                @include animated-a-tag;
            }

            .oeuvre-year {
                @include dimmed;
            }
        }

        .oeuvre-description {
            margin: 0em 1em 0em 0em;
            @include animated-a-tag;
        }

    }
}
/* ... */

